--- a/app/backend/Dockerfile
+++ b/app/backend/Dockerfile
@@ -3,11 +3,11 @@ FROM node:16-alpine
 
 WORKDIR /app-backend
 
-COPY package.json /app-backend
+COPY package.json ./
 
 RUN npm install
 
-COPY . /app-backend
+COPY . ./
 
 EXPOSE 3001
 
